add basic type
